@@ -1,8 +1,10 @@
 package com.workflowpro.backend.security;
 
 import java.io.IOException;
+import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
@@ -34,12 +36,16 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             String token=header.substring(7);
             try{
                 String username=jwtUtil.extractUsername(token);
+                String role=jwtUtil.extractRole(token);
+
+                var authority=new SimpleGrantedAuthority("ROLE_"+role);
 
                 UsernamePasswordAuthenticationToken auth=
-                new UsernamePasswordAuthenticationToken(username, null, Collections.emptyList());
+                new UsernamePasswordAuthenticationToken(username, null, List.of(authority));
                 
                 auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(auth);
+                
             }catch(Exception e){
 
             }
